# Seeker.Bot

./: .antigravityrules  .dockerignore  .env.example  .env.local.template  .gitignore  API_KEYS_VALIDATION_REPORT.md  ARCHITECTURE_REVIEW.md  BACKUP_CONFIGURATION.md  BUG_ANALYZER_OPERATIONS.md  CHANGES_SPRINT9.1.md  CHECKLIST_IMPLEMENTACAO.md  CODE_QUALITY_PROGRESS.md  CODE_REVIEW_REPORT.md  COMANDOS_ATUALIZADOS.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  EXCEPTION_HANDLING_REFACTOR.md  FASE_7_RESULTS.md  GITHUB_SETUP_RAPIDO.md  GLMOCR_ANALYSIS.md  IMPLEMENTATION_DECISIONS.md  IMPLEMENTATION_STATUS.md  INSTALLATION.md  INSTALLATION_OPTIMIZATION.md  KERNEL_SEXTA_FEIRA.md  LICENSE  MODELS_STORAGE_LOCATION.md  MONITOR_BENCHMARKS.sh  OPTIMIZATION_ROADMAP.md  PERFORMANCE_TUNING_GUIDE.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_2_SUMMARY.md  PHASE_A4_DECISION_TREE.md  PLANO_PROSPECCAO_B2B.md  PRODUCTION_READINESS.md  PROGRESS_FINAL_SESSION.md  PROJECT_STATE.md  README.md  README.pt-BR.md  (+98 more)
.claude/: settings.local.json
.github/: SETUP_GITHUB.md
.planning/: PROJECT.md  ROADMAP.md
ESeeker.Botconfiglocales/: en_US.json  pt_BR.json
Integrações/: MIGRATION_S4b.md  pdf_builder.py  sensenews_goal.py  sensenews_prompts.py
config/: .env.example  config_verificacao.json  credentials.json.example  models.py  skills.yaml  vault_tags.txt  viralx9_channels.yaml
docs/: API.md  CEREBRAS_SIGNUP.md  HEALTH_DASHBOARD.md  PAT_ROTATION_RUNBOOK.md  PYTHON_MIGRATION_PLAN.md  SARA_INTEGRATION_NOTE.md  SEEKER_CODE_REVIEW_2026-04-25.md  SEEKER_MASTER_PLAN_2026.md  SETUP_COWORK.md  SHOWDECK_ARCHITECTURE.md  SHOWDECK_VERIFICATION_WALKTHROUGH.md  all_cookies.txt  changelog.md  freetiers.md  freetiers_apis.md
logs/: bot_heartbeat.txt
reports/: AUDIT_VISION_3_PERSISTENCE.md  glm-ocr.json  minicpm-v.json  qwen2.5vl_7b.json  qwen3-vl_8b.json  qwen3.5_4b.json  results_minicpm-v.json  results_qwen2.5vl_7b.json  results_qwen3-vl_8b.json  results_qwen3.5_4b.json  summary_minicpm-v.json  summary_qwen2.5vl_7b.json  summary_qwen3-vl_8b.json  summary_qwen3.5_4b.json  vision_2_0_comparison.md  vision_2_0_comparison_5models.md  vision_2_0_comparison_FINAL_4MODELS.md  vision_2_0_comparison_final.md
scripts/: backfill_event_dates.py  backfill_uf.py  bench_p95.py  enrich_lead_months.py  import_instagram_cookies.py  migrate_hermes_to_seeker.py  migrate_schema_v3.py  mount_storage.ps1  seeker_cli.py  setup_github_repo.py  setup_watchdog.ps1  sync_history_to_agent.py  sync_sanitize.py  sync_to_public.bat  watchdog.ps1
seeker-v2-foundation/: MIGRATION.md  pyproject.toml
seeker-v2-foundation/src/: __main__.py
seeker-v2-foundation/src/channels/telegram/: bot.py  formatter.py
seeker-v2-foundation/src/core/: pipeline.py
seeker-v2-foundation/src/core/cognition/: prompts.py
seeker-v2-foundation/src/core/evidence/: arbitrage.py  decay.py
seeker-v2-foundation/src/core/healing/: judge.py
seeker-v2-foundation/src/core/memory/: embeddings.py  extractor.py  protocol.py  session.py  store.py
seeker-v2-foundation/src/core/phases/: base.py  deep.py  deliberate.py  reflex.py
seeker-v2-foundation/src/providers/: base.py
seeker_agent/: .dockerignore  .env.example  .gitignore  .hadolint.yaml  AGENTS.md  CONTRIBUTING.md  cli.py  (+44 more)
(+2527 files in other folders)
