[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seeker-bot"
version = "3.4.0"
description = "Autonomous research agent with epistemological triangulation"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.0",
    "aiohttp>=3.10",
    "aiosqlite>=0.19",
    "httpx>=0.25",
    "python-dotenv>=1.0",
    "playwright>=1.42",
    "PyAutoGUI>=0.9.54",
    "pynput>=1.7.6",
    "Pillow>=10.2.0",
    # Skill: knowledge_vault — YouTube extraction
    # Adicionadas no commit pós-incident 2026-05-17: import síncrono no topo
    # de extractors.py derrubou o boot quando a venv não tinha yt_dlp.
    # Agora extractors.py importa lazy E o pyproject garante presença.
    "yt-dlp>=2025.0",
    "youtube-transcript-api>=0.6",
    # Skill: vision/visão — embeddings, transformers, OCR
    "numpy>=1.26",
    "transformers>=4.40",
    "pydantic>=2.0",
    "requests>=2.31",
    # Stack: providers
    "google-generativeai>=0.8",
    "google-api-core>=2.20",
    # Stack: observability + memória
    "tiktoken>=0.7",
    "psutil>=5.9",
    "prometheus-client>=0.20",
    # Skill: event_radar — PDF reports
    "fpdf2>=2.7",
    # Skill: vision / desktop_watch — screen capture
    "mss>=10.0",
    # Skill: email_monitor / briefing — IMAP/SMTP async
    "aioimaplib>=2.0",
    "aiosmtplib>=5.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
# ShowDeck dashboard (local-only — não commitado no GitHub público)
showdeck = [
    "streamlit>=1.30",
    "pandas>=2.0",
    "plotly>=5.18",
]

[project.scripts]
seeker = "src.__main__:main"

[tool.setuptools.packages.find]
include = ["src*", "config*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
include = ["src", "config"]
extraPaths = ["."]
